--- a/Student_Record.ipynb
+++ b/Student_Record.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "list1 = ['one','two','three','four','five','six']\n",
+    "list1 = ['one','three','four','five','six']\n",
     "list2 = [1,2,3,4,5,6]\n",
     "list3 = ['a','b','c','d','e','f']\n",
     "list4 = [['apple'],['mango'],['grapes']]\n",
